[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/GameScripts/Spells/EnemyLaneCastSpellHighlightScript.gd" type="Script" id=1]
[ext_resource path="res://ModelsScript/EnemyLaneScript.gd" type="Script" id=2]

[node name="Lane" type="Control"]
margin_right = 69.0
margin_bottom = 259.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpellCastHighlight" type="Sprite" parent="."]
offset = Vector2( 34.5, 129.5 )
script = ExtResource( 1 )

[node name="SpellAnimation" type="AnimatedSprite" parent="."]
offset = Vector2( 34.5, 129.5 )
[connection signal="artilleryButtonClicked" from="." to="SpellCastHighlight" method="_on_Lane_artilleryButtonClicked"]
[connection signal="minesButtonClicked" from="." to="SpellCastHighlight" method="_on_Lane_minesButtonClicked"]
[connection signal="animation_finished" from="SpellAnimation" to="." method="_on_SpellAnimation_animation_finished"]
